package com.ifsp.gru.oficinas4.infra.microservices.auth_service.adapter.persistence;

import com.ifsp.gru.oficinas4.infra.microservices.auth_service.adapter.persistence.entity.UserJpaEntity;
import com.ifsp.gru.oficinas4.infra.microservices.auth_service.adapter.persistence.mapper.UserMapper;
import com.ifsp.gru.oficinas4.infra.microservices.auth_service.adapter.persistence.repository.UserRepository;
import com.ifsp.gru.oficinas4.infra.microservices.auth_service.core.domain.User;
import com.ifsp.gru.oficinas4.infra.microservices.auth_service.core.port.UserRepositoryPort;
import lombok.RequiredArgsConstructor;
import org.springframework.stereotype.Component;

import java.util.Optional;

@Component
@RequiredArgsConstructor
public class UserPersistenceAdapter implements UserRepositoryPort {

    private final UserRepository repository;
    private final UserMapper mapper;

    @Override
    public User save(User user) {
        UserJpaEntity entity = mapper.toJpaEntity(user);
        UserJpaEntity savedEntity = repository.save(entity);
        return mapper.toDomain(savedEntity);
    }

    @Override
    public Optional<User> findById(Long id) {
        return repository.findById(id).map(mapper::toDomain);
    }

    @Override
    public void deleteById(Long id) {
        repository.deleteById(id);
    }

    @Override
    public Optional<User> findByEmail(String email) {
        return repository.findByEmail(email).map(mapper::toDomain);
    }

    @Override
    public boolean existsByEmail(String email) {
        return repository.existsByEmail(email);
    }
}