package com.ifsp.gru.oficinas4.infra.microservices.auth_service.adapter.persistence.repository;


import com.ifsp.gru.oficinas4.infra.microservices.auth_service.adapter.persistence.entity.UserJpaEntity;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

import java.util.Optional;

@Repository
public interface UserRepository extends JpaRepository<UserJpaEntity, Long> {

    Optional<UserJpaEntity> findByEmail(String email);

    boolean existsByEmail(String email);
}